# chubby-hat

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  shell.nix
assets/3D models/: KH-TYPE-C-CY-14P.wrl  KH_TYPE_C_31_D_09.wrl
hardware/: .gitignore
hardware/chubby hat/src/: chubby hat.kicad_pcb  chubby hat.kicad_pro  chubby hat.kicad_sch
hooks/: pre-commit
production/gbr/: chubby-hat-B_Cu.gbr  chubby-hat-B_Mask.gbr  chubby-hat-B_Paste.gbr  chubby-hat-B_Silkscreen.gbr  chubby-hat-Edge_Cuts.gbr  chubby-hat-F_Cu.gbr  chubby-hat-F_Mask.gbr  chubby-hat-F_Paste.gbr  chubby-hat-F_Silkscreen.gbr  chubby-hat-NPTH.drl  chubby-hat-PTH.drl  chubby-hat-job.gbrjob
production/gbr/chubby-hat/: chubby-hat-B.Cu.gbr  chubby-hat-B.Mask.gbr  chubby-hat-B.Paste.gbr  chubby-hat-B.SilkS.gbr  chubby-hat-B_Cu.gbr  chubby-hat-B_Mask.gbr  chubby-hat-B_Paste.gbr  chubby-hat-B_Silkscreen.gbr  chubby-hat-Edge.Cuts.gbr  (+12 more)
scripts/: bom2grouped_csv_lcsc.xsl  pattern.scad  pcb_helper.py  pos2cpl_jlcpcb.py
source/: kicad-template.kicad_pcb  kicad-template.kicad_pro  kicad-template.kicad_sch
source/chubby-hat/: Colorlight 5A-75B.kicad_sch  RP2040.kicad_sch  Type_C_USB_2.0.kicad_sch  ZVD.kicad_sch  chubby-hat.kicad_pcb  chubby-hat.kicad_pro  chubby-hat.kicad_sch  fp-lib-table  sym-lib-table
source/hc245t-bypass-esd/: hc245t-bypass-esd.kicad_pcb  hc245t-bypass-esd.kicad_pro  hc245t-bypass-esd.kicad_sch
source/hc245t-bypass-esd-panel/: hc245t-bypass-esd-panel.kicad_pcb  hc245t-bypass-esd-panel.kicad_pro
source/template/: template.kicad_pcb  template.kicad_pro
(+57 files in other folders)
